--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.DT142GProjekt"
         tools:targetApi="31">
         <activity
-            android:name=".List_of_ordered_items_Activity"
+            android:name=".SendOrderActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
